# mycontainer

./: 01-build.sh  02-run.sh  03-exec.sh  sssd.conf
ansible/apache/: build.sh  destroy.yml  site.yml
ansible/bridge/: build.sh  hosts.yml  site.yml
ansible/burpsuite/: build.sh  site.yml  template.yml
ansible/ca/: build.sh  groups.yml  site.yml
ansible/cacert/: build.sh  debian.yml  dump_cacerts.py  redhat.yml  site.yml  template.yml
ansible/chrony/: 0001-fix_for_sudo_rs.patch  fix_sudo_plugin.sh  site.yml  template.yml
ansible/cockpit/: build.sh  site.yml
ansible/couchdb-nginx/: hosts.yml  index.html  inventory.yml  site.yml
ansible/dex/: .gitignore  build.sh  inventory.yml  site.yml
ansible/docker/: build.sh  site.yml
ansible/dvwa/: build.sh  opnsense-waf.rst  site.yml
ansible/elasticsearch/: .gitignore  api_key.sh  build.sh  destroy.yml  groups.yml  reset.yml  site.yml  test.py  useradmin.sh
ansible/filebeat/: .gitignore  build.sh  destroy.yml  gen_csv_log.py  gen_dummy_log.py  gen_multiline_log.py  reset.yml  site.yml  template.yml
ansible/firefox/: build.sh  site.yml  template.yml
ansible/freeradius/: build.sh  site.yml
ansible/glow/: build.sh  site.yml
ansible/grafana/: .gitignore  build.sh  site.yml
ansible/httpd/: build.sh  site.yml  template.yml
ansible/jenkins/: .gitignore  build.sh  site.yml  template.yml
ansible/kibana/: build.sh  destroy.yml  reset.yml  site.yml  template.yml  test_key.sh  test_kql.sh
ansible/kvm/: build.sh  site.yml
ansible/log4j-shell-poc/: attacker.yml  build.sh  site.yml  template.yml  victim.yml
ansible/logstash/: .gitignore  build.sh  destroy.yml  reset.yml  site.yml  template.yml
ansible/mariadb/: build.sh  inventory.yml  site.yml
ansible/msf/: build.sh  site.yml
ansible/nginx/: .gitignore  build.sh  hosts.yml  site.yml
ansible/nvidia/: build.sh  site.yml
ansible/oauth2-proxy/: .gitignore  inventory.yml  site.yml
ansible/ollama/: build.sh  models.txt  site.yml
ansible/openvswitch/: build.sh  site.yml
ansible/openwebui/: apache2-openwebui.conf  build.sh  destroy.yml  ldap_auth.txt  openwebui.conf  site.yml
ansible/ovsbr/: .gitignore  clean.yml  site.yml
ansible/packetbeat/: build.sh  destroy.yml  packetbeat_sankey.hjson  reset.yml  site.yml  template.yml
ansible/pyenv/: build.sh  pyenv.shrc  site.yml
ansible/root_on_zfs/: 01-netcfg.yml  build.sh  chroot.yml  configure.yml  grub  site.yml  sources.list  uuid.sh
ansible/rsyslog/: build.sh  site.yml  template.yml
ansible/serialconsole/: build.sh  site.yml  template.yml
ansible/slapd/: add_sshpublickey.sh  build.sh  site.yml  template.yml
ansible/slapd-consumer/: .gitignore  build.sh  inventory.yml  site.yml  template.yml
ansible/slapd-ldapscripts/: build.sh  site.yml
ansible/slapd-provider/: build.sh  clean.yml  fix_refintattr.sh  groups.yml  replace_crt.sh  site.yml
ansible/sssd_ldap/: build.sh  groups.yml  inventory.yml  note.txt  pubkeyadd.sh  pubkeydel.sh  site.yml  template.yml
ansible/static_ip/: site.yml  template.yml
bridge/: build.sh  dhcpd.yml  disable_bridge.yml  enable_bridge.yml  groups.ini
docker/: 00-create.sh  Dockerfile  build.sh  hello  iperf3
docker/mydocker/: Dockerfile  Makefile.am  configure.ac  mydocker.spec
kvm/: .gitignore  create_archlinux.sh  create_centos.sh  create_freebsd.sh  create_netbsd.sh  create_omnios.sh  create_openbsd.sh  create_rocky.sh  create_ubuntu.sh  install_rhel9.sh  install_rocky.sh  memo.txt  openindiana.sh  pam.conf
lxc/: build.sh  container.sh  mytemplate
macvlan/: .gitignore  build.sh  clean.yml  groups  site.yml
openvswitch/: build.sh  network.dot
vnetenv/: build.sh  site.yml  template.yml
yocto/: README.txt  add_layers.py  build.sh  config.bashrc  custom_image.sh  empty_image.sh
yocto/libmylib/: .gitignore  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  libmylib.spec  mkrpm.sh
yocto/libmylib/config/: config.h.in
yocto/libmylib/src/: Makefile.am  Makefile.in  mylib.c
yocto/libmylib/tests/: 00-test.c  Makefile.am  Makefile.in
yocto/myapp/: Makefile.am  Makefile.in  README  configure  configure.ac  mkrpm.sh  myapp.spec
yocto/myapp/src/: Makefile.am  Makefile.in  myapp.c
(+1761 files in other folders)
